2003-07-11  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* S_scheme.cpp: regularise in case of resonance.

2003-06-13  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* camfr_wrap.cpp: Add get_polarisation.

2003-06-04  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* geometry.py: Fix add_flipped.

2003-05-23  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* stack.cpp: Warn if incident field not set.

2003-04-09  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* camfr_wrap.cpp: Add various width() functions.

2003-04-09  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* camfr_wrap.cpp: Add Cavity::bot_stack and top_stack.
	* cavity.h: Ditto.

2003-03-31  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* camfr_wrap.cpp: Add Section:set_estimate() and Section.set_sorting().

2003-03-13  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* cavity.h: Reorder arguments.
	* cavity.cpp: Ditto.

2003-02-05  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* camfr_wrap.cpp: Added Material::set_n and set_mur.

2003-02-05  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* bloch.h: Added BlochMode::fw_bw.
	* bloch.cpp: Ditto.
	* camfr_wrap.cpp: Ditto.

2003-02-05  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* cavity.h: More logical argument order in constructor.
	* cavity.cpp: Ditto.

2003-02-05  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* stack.cpp: Fix naming clash.

2003-02-05  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* expression.cpp: Fix zero inc slab bug.
	* S_scheme_fields.cpp: Ditto.

2003-02-04  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* field.h: Remove superfluous constructor.
	* field.cpp: Ditto.
	* S_scheme_fields.cpp: Ditto.
	* bloch.cpp: Ditto.
	* stack.cpp: Ditto.
	* waveguide.cpp: Ditto.

2003-02-04  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* cavity.h: add eps_at, mu_at, n_at.
	* cavity.cpp: Ditto.
	* camfr_wrap.cpp: Ditto.

2003-02-04  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* field.h: constify arguments.
	* field.cpp: Ditto.
