@@ -1,6 +1,11 @@
 2003-07-11  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
-	* S_scheme.cpp: regularise in case of resonance.
+	* scatterer.h: Add SquashedScatterer.
+	* camfr_wrap.cpp: Ditto.
+
+2003-07-11  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+	* S_scheme.cpp: Regularise in case of resonance.
 
 2003-06-13  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
